apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      #securityContext:
      #fsGroup: 911
      #runAsUser: 911
        #runAsGroup: 911
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.6.1
        name: mealie
          # securityContext:
          #allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
            ephemeral-storage: "200Mi"
          limits:
            memory: "512Mi"
            cpu: "500m"
            ephemeral-storage: "500Mi"
        ports:
          - containerPort: 9000
        volumeMounts:
          - mountPath: /app/data
            name: mealie
      volumes:
        - name: mealie
          persistentVolumeClaim:
            claimName: mealie
