apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - name: http
      port: 9001
      targetPort: 9000
